section-7-replicaset/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: myapp
 labels:
  app: myapp
spec:
 replicas: 10
 selector:
  matchLabels:
   app: myapp
 strategy:
  type: RollingUpdate
  rollingUpdate:
   maxUnavailable: 1
   maxSurge: 1
 minReadySeconds: 10
 revisionHistoryLimit: 10
 progressDeadlineSeconds: 600
 template:
  metadata:
   labels:
    app: myapp
  spec:
   containers:
    - name: web
      image: my-nest-app:v1
      imagePullPolicy: IfNotPresent
      ports:
       - containerPort: 3000
      resources:
       requests:
        cpu: 100m
        memory: 128Mi
       limits:
        cpu: 200m
        memory: 256Mi
      livenessProbe:
       httpGet:
        path: /
        port: 3000
       initialDelaySeconds: 10
       periodSeconds: 10
       timeoutSeconds: 10
       successThreshold: 1
       failureThreshold: 3
      readinessProbe:
       httpGet:
        path: /
        port: 3000
       initialDelaySeconds: 10
      volumeMounts:
       - name: sample-volume
         mountPath: /data
   volumes:
    - name: sample-volume
      emptyDir: {}
