section-7-replicaset/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
 name: myapp-service
spec:
 selector:
  app: myapp
 type: NodePort # أو LoadBalancer لو في cloud provider
 ports:
  - protocol: TCP
    port: 3000 # المنفذ داخل الـ cluster
    targetPort: 3000 # المنفذ في البود
    nodePort: 31000 # منفذ خارجي مفتوح على كل nodes (اختياري)
