section-7-replicaset/service.yaml
apiVersion: v1
kind: Service
metadata:
 name: myapp-service
spec:
 selector:
  app: myapp # ✅ Must match pod labels
 ports:
  - port: 3000
    targetPort: 3000
