section-7-replicaset/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: myapp-ingress
 namespace: default
 annotations:
  nginx.ingress.kubernetes.io/rewrite-target: /
spec:
 rules:
  - host: myapp.local
    http:
     paths:
      - path: /
        pathType: Prefix
        backend:
         service:
          name: myapp-service # ✅ MUST be your NestJS service name
          port:
           number: 3000 # ✅ Match your container port
